<resources>
    <string name="app_name">ZXDC</string>
    <string name="Data_parsing_error_please_try_again_later">数据解析出错，请稍候再试</string>
    <string name="hint_phone">输入手机号</string>
    <string name="code">输入验证码</string>
    <string name="get_code">发送验证码</string>
    <string name="dialog_scenic_hot_hint">温馨提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="network_can_not_be_accessed_please_check_the_network_connection">网络无法访问，请检查网络连接!</string>
    <string name="configure">配置</string>
    <string name="please_scan_right_qr_code">请扫描正确的车辆二维码！</string>
    <string name="scan_failed_try_again">扫描失败，请重新扫描！</string>
    <string name="payment_success">支付成功</string>
    <string name="payment_failed">支付失败</string>
    <string name="paymnet_canceled">支付取消</string>
    <string name="payment_confirming">支付结果确认中</string>
    <string name="payment_has_been_cancelled">已取消支付！</string>
    <string name="locating">定位中</string>
    <string name="login_is_reply_agree">登录即代表同意</string>
    <string name="service_agreement">服务协议</string>
    <string name="login">登录</string>
    <string name="p_set_phone">请输入手机号码!</string>
    <string name="Please_enter_the_full_cell_phone_number">请输入完整的手机号码</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="please_print_message_code">请输入验证码</string>
    <string name="logining">登录中</string>
    <string name="second">秒</string>
    <string name="http_error">网络繁忙，请稍后再试</string>
    <string name="press_one_more_time_to_exit_app">再按一次退出智享单车</string>
    <string name="not_find_bluttooth">扫描不到蓝牙，请您靠近车辆重新尝试，如无法解决，请联系客服!</string>
    <string name="Receive_data_timeout_please_try_again">接收数据超时，请重试！</string>
    <string name="Data_loading">数据加载中</string>
    <string name="entry_car_code">请输入正确的7位车牌号</string>
    <string name="scan_code">扫码</string>
    <string name="Aim_the_qr_code_on_the_car">对准车上的二维码</string>
    <string name="eit_bikecode">输入单车编号</string>
    <string name="open_light">手电筒</string>
    <string name="please_enter_full_bike_number">请输入完整的车辆编号！</string>
    <string name="please_enter_bike_bumber">请输入车辆编号！</string>
    <string name="downloading">新版本下载中...</string>
    <string name="version_update">版本更新</string>
    <string name="bluetooth_disconnected_please_try_again">蓝牙连接断开！</string>
    <string name="please_install_the_WeChat_client_first">请先安装微信客户端！</string>
    <string name="loading">加载中</string>
    <string name="qiche_time">时间(分)</string>
    <string name="qiche_distance">距离(米)</string>
    <string name="play_ka">消耗(大卡)</string>
    <string name="using_bike">正在用车</string>
    <string name="opening_lock">开锁中</string>
    <string name="closing_lock">关锁中</string>
    <string name="open_lock_failed">开锁失败</string>
    <string name="mad_fire_wheel">疯火轮</string>
    <string name="mad_fire_wheel_template">疯火轮模板</string>
    <string name="vehicle_number">车辆编号</string>
    <string name="meter">米</string>
    <string name="distance_me">距离我</string>
    <string name="walk_in">步行到达</string>
    <string name="confirmation_reservation">确认预约</string>
    <string name="cancel_bespoke">取消预约</string>
    <string name="cannot_find_this_address">无法查询到该地址</string>
    <string name="minute_clock">分钟</string>
    <string name="free_money">免费倒计时</string>
    <string name="charging">计费</string>
    <string name="primary">元</string>
    <string name="ring_failed">响铃失败</string>
    <string name="not_location_plase_open_GPS">无法定位，请开启定位权限或者打开GPS！</string>
</resources>
