<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin_as"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <net.edaibu.easywalking.utils.scan.view.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <RelativeLayout android:id="@+id/rel_head"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/main_color">

                <LinearLayout android:id="@+id/lin_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingRight="30dp"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView android:id="@+id/tv_head"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/scan_code"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:layout_centerInParent="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="140dp"
                android:id="@+id/fullscreen_view"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/Aim_the_qr_code_on_the_car"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_aqs_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_aqs_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/eit_bikecode" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/eit_bikecode"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_aqs_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/open_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/open_light"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>